--- a/examples/shardingsphere-jdbc-example/sharding-example/sharding-spring-boot-jpa-example/src/main/resources/application-sharding-databases-tables.properties
+++ b/examples/shardingsphere-jdbc-example/sharding-example/sharding-spring-boot-jpa-example/src/main/resources/application-sharding-databases-tables.properties
@@ -21,7 +21,7 @@ spring.shardingsphere.datasource.ds_0.jdbc-url=jdbc:mysql://localhost:3306/demo_
 spring.shardingsphere.datasource.ds_0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds_0.driver-class-name=com.mysql.jdbc.Driver
 spring.shardingsphere.datasource.ds_0.username=root
-spring.shardingsphere.datasource.ds_0.password=123456
+spring.shardingsphere.datasource.ds_0.password=
 spring.shardingsphere.datasource.ds_0.max-active=16
 
 spring.shardingsphere.datasource.ds_1.jdbc-url=jdbc:mysql://localhost:3306/demo_ds_1?serverTimezone=UTC&useSSL=false
