--- a/examples/shardingsphere-proxy-example/shardingsphere-proxy-hint-example/src/main/resources/META-INF/hint-databases-only.yaml
+++ b/examples/shardingsphere-proxy-example/shardingsphere-proxy-hint-example/src/main/resources/META-INF/hint-databases-only.yaml
@@ -16,6 +16,6 @@
 #
 
 driverClassName: com.mysql.jdbc.Driver
-jdbcUrl: jdbc:mysql://localhost:3307/databases_only
+jdbcUrl: jdbc:mysql://localhost:3307/databases_only?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 username: root
 password: root
