--- a/shardingsphere-infra/shardingsphere-infra-authority/shardingsphere-infra-authority-common/pom.xml
+++ b/shardingsphere-infra/shardingsphere-infra-authority/shardingsphere-infra-authority-common/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>shardingsphere-infra-executor</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-lang3</artifactId>
+        	<version>3.8</version>
+        </dependency>
     </dependencies>
 </project>
