--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.count=3 -Dmaven.wagon.httpconnectionManager.ttlSeconds=30
+
 jobs:
   windows:
     runs-on: windows-latest
@@ -45,9 +48,9 @@ jobs:
         with:
           java-version: 8
       - name: Build with Maven
-        run: ./mvnw -B clean cobertura:cobertura -D"maven.javadoc.skip"=true install -D"http.keepAlive"="false" -D"maven.wagon.http.pool"="false" -D"maven.wagon.httpconnectionManager.ttlSeconds"="120"
+        run: ./mvnw -B clean cobertura:cobertura -D"maven.javadoc.skip"=true install
       - name: Build examples with Maven
-        run: ./mvnw -B -f examples/pom.xml clean package -DskipTests -D"http.keepAlive"="false" -D"maven.wagon.http.pool"="false" -D"maven.wagon.httpconnectionManager.ttlSeconds"="120"
+        run: ./mvnw -B -f examples/pom.xml clean package -DskipTests
   
   unix:
     runs-on: ${{ matrix.os }}
@@ -68,6 +71,6 @@ jobs:
         with:
           java-version: 8
       - name: Build with Maven
-        run: ./mvnw -B clean cobertura:cobertura -Dmaven.javadoc.skip=true install -D"http.keepAlive"="false" -D"maven.wagon.http.pool"="false" -D"maven.wagon.httpconnectionManager.ttlSeconds"="120"
+        run: ./mvnw -B clean cobertura:cobertura -Dmaven.javadoc.skip=true install
       - name: Build examples with Maven
-        run: ./mvnw -B -f examples/pom.xml clean package -DskipTests -D"http.keepAlive"="false" -D"maven.wagon.http.pool"="false" -D"maven.wagon.httpconnectionManager.ttlSeconds"="120"
+        run: ./mvnw -B -f examples/pom.xml clean package -DskipTests
