--- a/shardingsphere-agent/shardingsphere-agent-plugins/shardingsphere-agent-plugin-tracing/pom.xml
+++ b/shardingsphere-agent/shardingsphere-agent-plugins/shardingsphere-agent-plugin-tracing/pom.xml
@@ -44,6 +44,7 @@
         <zipkin-brave.version>5.13.2</zipkin-brave.version>
         <zipkin-reporter.version>2.16.2</zipkin-reporter.version>
         <opentelemetry.version>1.3.0</opentelemetry.version>
+        <opentelemetry-autoconfigure.version>1.3.0-alpha</opentelemetry-autoconfigure.version>
     </properties>
     
     <dependencies>
