--- a/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
+++ b/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
@@ -59,3 +59,6 @@
 #  sql-show: false
 #  check-table-metadata-enabled: false
 #  lock-wait-timeout-milliseconds: 50000 # The maximum time to wait for a lock
+#    # Proxy memory strictly fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
+#    # The default value is Integer.MIN_VALUE, which means set the minimum value for different JDBC drivers.
+#  proxy-memory-strictly-fetch-size: -0x80000000
