--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -60,6 +60,6 @@
 #  check-table-metadata-enabled: false
 #  lock-wait-timeout-milliseconds: 50000 # The maximum time to wait for a lock
 #  show-process-list-enabled: false
-#    # Proxy memory strictly fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
-#    # The default value is Integer.MIN_VALUE, which means set the minimum value for different JDBC drivers.
-#  proxy-memory-strictly-fetch-size: -0x80000000
+#    # Proxy backend query fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
+#    # The default value is -1, which means set the minimum value for different JDBC drivers.
+#  proxy-backend-query-fetch-size: -1
