--- a/examples/shardingsphere-parser-example/pom.xml
+++ b/examples/shardingsphere-parser-example/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>shardingsphere-sql-parser-oracle</artifactId>
             <version>5.0.0-RC1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-sql-parser-sqlserver</artifactId>
+            <version>5.0.0-RC1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
