--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/engine-env.properties
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/engine-env.properties
@@ -18,12 +18,12 @@
 # EMBEDDED, DOCKER, NATIVE
 it.env.type=${it.env}
 
-it.adapters=proxy
+it.adapters=jdbc
 
 #it.scenarios=db,tbl,dbtbl_with_readwrite_splitting,readwrite_splitting,encrypt,dbtbl_with_readwrite_splitting_and_encrypt,sharding_governance,shadow
-it.scenarios=tbl
+it.scenarios=db,tbl,dbtbl_with_readwrite_splitting,readwrite_splitting,encrypt,dbtbl_with_readwrite_splitting_and_encrypt
 
 #it.databases=H2,MySQL,Oracle,SQLServer,PostgreSQL
-it.databases=PostgreSQL
+it.databases=H2
 
 it.run.additional.cases=false
