--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/tbl/mysql/proxy/conf/config-tbl.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/tbl/mysql/proxy/conf/config-tbl.yaml
@@ -59,7 +59,7 @@ rules:
           shardingColumn: item_id
           shardingAlgorithmName: standard_test
   bindingTables:
-    - t_order,t_order_item,t_order_details,t_order_item_federate_sharding
+    - t_order,t_order_item,t_order_details
   broadcastTables:
     - t_broadcast_table
     - t_broadcast_table_for_ddl
