--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/db/rules.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/db/rules.yaml
@@ -22,6 +22,7 @@ rules:
       actualDataNodes: db_${0..9}.t_order
       databaseStrategy:
         standard:
+          shardingColumn: user_id
           shardingAlgorithmName: standard_test
     t_order_item:
       actualDataNodes: db_${0..9}.t_order_item
@@ -38,6 +39,14 @@ rules:
         standard:
           shardingColumn: user_id
           shardingAlgorithmName: standard_test
+    t_message:
+      actualDataNodes: db_${0..9}.t_message
+      databaseStrategy:
+        standard:
+          shardingAlgorithmName: standard_test
+      keyGenerateStrategy:
+        column: message_id
+        keyGeneratorName: constant
   bindingTables:
     - t_order,t_order_item,t_order_details
   broadcastTables:
