--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/sharding_governance/mysql/proxy/conf/server.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/sharding_governance/mysql/proxy/conf/server.yaml
@@ -18,7 +18,7 @@
 governance:
   registryCenter:
     type: ZooKeeper
-    namespace: governance_ds
+    namespace: governance_db
     serverLists: zk:2181
     props:
       retryIntervalMilliseconds: 500
