--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/tbl/rules.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/tbl/rules.yaml
@@ -39,14 +39,8 @@ rules:
         standard:
           shardingColumn: order_id
           shardingAlgorithmName: standard_test
-    t_order_item_federate_sharding:
-      actualDataNodes: tbl.t_order_item_federate_sharding_${0..1}
-      tableStrategy:
-        standard:
-          shardingColumn: item_id
-          shardingAlgorithmName: standard_test
   bindingTables:
-    - t_order,t_order_item,t_order_details,t_order_item_federate_sharding
+    - t_order,t_order_item,t_order_details
   broadcastTables:
     - t_broadcast_table
     - t_broadcast_table_for_ddl
