Avoid to persist gov rule

--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -54,7 +54,7 @@ rules:
         timeToLiveSeconds: 60
         maxRetries: 3
         operationTimeoutMilliseconds: 500
-    overwrite: false
+    overwrite: true
 
 props:
   max-connections-size-per-query: 1
