--- a/shardingsphere-proxy/shardingsphere-proxy-common/src/test/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-common/src/test/resources/conf/server.yaml
@@ -15,19 +15,19 @@
 # limitations under the License.
 #
 
-governance:
-  registryCenter:
-    type: ZooKeeper
-    namespace: test_name_1
-    serverLists: localhost:2181
-  overwrite: false
-
 rules:
   - !AUTHORITY
     users:
       - root@:root
     provider:
       type: NATIVE
+  
+  - !GOVERNANCE
+    registryCenter:
+      type: ZooKeeper
+      namespace: test_name_1
+      serverLists: localhost:2181
+    overwrite: false
 
 props:
   max-connections-size-per-query: 1
