config-db.yaml use ds, not db

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/db/h2/proxy/conf/config-db.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/docker/db/h2/proxy/conf/config-db.yaml
@@ -134,7 +134,7 @@ rules:
           shardingColumn: user_id
           shardingAlgorithmName: standard_test
     t_order_item_federate_sharding:
-      actualDataNodes: db_1.t_order_item_federate_sharding_${0..1}
+      actualDataNodes: ds_1.t_order_item_federate_sharding_${0..1}
       tableStrategy:
         standard:
           shardingColumn: item_id
