--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,8 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
     steps:
+      - name: License checker
+        uses: apache/skywalking-eyes@main
       - name: Cache Maven Repos
         uses: actions/cache@v2
         with:
