Restore licenses that do not need to be modified.

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -27,8 +27,7 @@ header:
     - '.github/ISSUE_TEMPLATE/**'
     - '.github/PULL_REQUEST_TEMPLATE'
     - '**/.gitignore'
-    - '.mvn/wrapper/maven-wrapper.properties'
-    - '.mvn/jvm.config'
+    - '.mvn'
     - 'docs/**'
     - '**/*.md'
     - '**/*.json'
