--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -38,30 +38,30 @@
 #      operationTimeoutMilliseconds: 500
 #  overwrite: false
 #
-#rules:
-#  - !AUTHORITY
-#    users:
-#      - root@%:root
-#      - sharding@:sharding
-#    provider:
-#      type: NATIVE
-#
-#props:
-#  max-connections-size-per-query: 1
-#  executor-size: 16  # Infinite by default.
-#  proxy-frontend-flush-threshold: 128  # The default value is 128.
-#    # LOCAL: Proxy will run with LOCAL transaction.
-#    # XA: Proxy will run with XA transaction.
-#    # BASE: Proxy will run with B.A.S.E transaction.
-#  proxy-transaction-type: LOCAL
-#  xa-transaction-manager-type: Atomikos
-#  proxy-opentracing-enabled: false
-#  proxy-hint-enabled: false
-#  sql-show: false
-#  check-table-metadata-enabled: false
-#  lock-wait-timeout-milliseconds: 50000 # The maximum time to wait for a lock
-#  show-process-list-enabled: false
-#    # Proxy backend query fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
-#    # The default value is -1, which means set the minimum value for different JDBC drivers.
-#  proxy-backend-query-fetch-size: -1
-#  check-duplicate-table-enabled: false
+rules:
+  - !AUTHORITY
+    users:
+      - root@%:root
+      - sharding@:sharding
+    provider:
+      type: NATIVE
+
+props:
+  max-connections-size-per-query: 1
+  executor-size: 16  # Infinite by default.
+  proxy-frontend-flush-threshold: 128  # The default value is 128.
+    # LOCAL: Proxy will run with LOCAL transaction.
+    # XA: Proxy will run with XA transaction.
+    # BASE: Proxy will run with B.A.S.E transaction.
+  proxy-transaction-type: LOCAL
+  xa-transaction-manager-type: Atomikos
+  proxy-opentracing-enabled: false
+  proxy-hint-enabled: false
+  sql-show: false
+  check-table-metadata-enabled: false
+  lock-wait-timeout-milliseconds: 50000 # The maximum time to wait for a lock
+  show-process-list-enabled: false
+    # Proxy backend query fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
+    # The default value is -1, which means set the minimum value for different JDBC drivers.
+  proxy-backend-query-fetch-size: -1
+  check-duplicate-table-enabled: false
