--- a/shardingsphere-infra/shardingsphere-infra-mode/shardingsphere-infra-mode-core/pom.xml
+++ b/shardingsphere-infra/shardingsphere-infra-mode/shardingsphere-infra-mode-core/pom.xml
@@ -22,25 +22,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.shardingsphere</groupId>
-        <artifactId>shardingsphere</artifactId>
+        <artifactId>shardingsphere-infra-mode</artifactId>
         <version>5.0.0-RC1-SNAPSHOT</version>
     </parent>
-    <artifactId>shardingsphere-infra</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>shardingsphere-infra-mode-core</artifactId>
     <name>${project.artifactId}</name>
     
-    <modules>
-        <module>shardingsphere-infra-common</module>
-        <module>shardingsphere-infra-mode</module>
-        <module>shardingsphere-infra-parser</module>
-        <module>shardingsphere-infra-binder</module>
-        <module>shardingsphere-infra-route</module>
-        <module>shardingsphere-infra-rewrite</module>
-        <module>shardingsphere-infra-executor</module>
-        <module>shardingsphere-infra-merge</module>
-        <module>shardingsphere-infra-context</module>
-        <module>shardingsphere-infra-datetime</module>
-        <module>shardingsphere-infra-optimize</module>
-        <module>shardingsphere-infra-authority</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-infra-context</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
