--- a/shardingsphere-infra/shardingsphere-infra-mode/shardingsphere-infra-mode-type/shardingsphere-infra-standalone-mode/pom.xml
+++ b/shardingsphere-infra/shardingsphere-infra-mode/shardingsphere-infra-mode-type/shardingsphere-infra-standalone-mode/pom.xml
@@ -31,5 +31,6 @@
     
     <modules>
         <module>shardingsphere-infra-standalone-mode-core</module>
+        <module>shardingsphere-infra-standalone-mode-repository</module>
     </modules>
 </project>
