--- a/shardingsphere-infra/shardingsphere-infra-mode/shardingsphere-infra-mode-type/shardingsphere-infra-cluster-mode/shardingsphere-infra-cluster-mode-repository/shardingsphere-infra-cluster-mode-repository-provider/pom.xml
+++ b/shardingsphere-infra/shardingsphere-infra-mode/shardingsphere-infra-mode-type/shardingsphere-infra-cluster-mode/shardingsphere-infra-cluster-mode-repository/shardingsphere-infra-cluster-mode-repository-provider/pom.xml
@@ -28,4 +28,9 @@
     <artifactId>shardingsphere-infra-cluster-mode-repository-provider</artifactId>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
+    
+    <modules>
+        <module>shardingsphere-governance-repository-zookeeper-curator</module>
+        <module>shardingsphere-governance-repository-etcd</module>
+    </modules>
 </project>
