use aes_encryptor instead of type test

--- a/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/dbtbl_with_readwrite_splitting_and_encrypt/rules.yaml
+++ b/shardingsphere-test/shardingsphere-integration-test/shardingsphere-integration-test-suite/src/test/resources/env/dbtbl_with_readwrite_splitting_and_encrypt/rules.yaml
@@ -158,8 +158,6 @@ rules:
       type: AES
       props:
         aes-key-value: 123456abc
-    test:
-      type: test
   tables:
     t_user:
       columns:
@@ -178,4 +176,4 @@ rules:
         pwd:
           plainColumn: plain_pwd
           cipherColumn: cipher_pwd
-          encryptorName: test
+          encryptorName: aes_encryptor
