Move shardingsphere-infra-authority to shardingsphere-kernel

--- a/shardingsphere-kernel/pom.xml
+++ b/shardingsphere-kernel/pom.xml
@@ -25,20 +25,11 @@
         <artifactId>shardingsphere</artifactId>
         <version>5.0.0-RC1-SNAPSHOT</version>
     </parent>
-    <artifactId>shardingsphere-infra</artifactId>
+    <artifactId>shardingsphere-kernel</artifactId>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     
     <modules>
-        <module>shardingsphere-infra-common</module>
-        <module>shardingsphere-infra-parser</module>
-        <module>shardingsphere-infra-binder</module>
-        <module>shardingsphere-infra-route</module>
-        <module>shardingsphere-infra-rewrite</module>
-        <module>shardingsphere-infra-executor</module>
-        <module>shardingsphere-infra-merge</module>
-        <module>shardingsphere-infra-context</module>
-        <module>shardingsphere-infra-datetime</module>
-        <module>shardingsphere-infra-optimize</module>
+        <module>shardingsphere-infra-authority</module>
     </modules>
 </project>
