--- a/shardingsphere-jdbc/shardingsphere-jdbc-spring/shardingsphere-jdbc-core-spring/shardingsphere-jdbc-core-spring-boot-starter/src/test/resources/application-common.properties
+++ b/shardingsphere-jdbc/shardingsphere-jdbc-spring/shardingsphere-jdbc-core-spring/shardingsphere-jdbc-core-spring-boot-starter/src/test/resources/application-common.properties
@@ -17,10 +17,9 @@
 
 spring.shardingsphere.schema.name=logic_db
 
-spring.shardingsphere.mode.type=Cluster
-spring.shardingsphere.mode.repository.type=ZooKeeper
-spring.shardingsphere.mode.repository.props.namespace=demo_boot_common
-spring.shardingsphere.mode.repository.props.serverLists=localhost:2181
+spring.shardingsphere.mode.type=Standalone
+spring.shardingsphere.mode.repository.type=local
+spring.shardingsphere.mode.repository.props.path=target
 spring.shardingsphere.mode.overwrite=true
 
 spring.shardingsphere.datasource.names=ds_${0..1}
