--- a/shardingsphere-kernel/shardingsphere-kernel-transaction/shardingsphere-kernel-transaction-xa/shardingsphere-kernel-transaction-xa-provider/pom.xml
+++ b/shardingsphere-kernel/shardingsphere-kernel-transaction/shardingsphere-kernel-transaction-xa/shardingsphere-kernel-transaction-xa-provider/pom.xml
@@ -16,20 +16,22 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.shardingsphere</groupId>
-        <artifactId>shardingsphere-kernel-transaction</artifactId>
+        <artifactId>shardingsphere-kernel-transaction-xa</artifactId>
         <version>5.0.0-RC1-SNAPSHOT</version>
     </parent>
-    <artifactId>shardingsphere-kernel-transaction-xa</artifactId>
+    <artifactId>shardingsphere-kernel-transaction-xa-provider</artifactId>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
     
     <modules>
-        <module>shardingsphere-kernel-transaction-xa-spi</module>
-        <module>shardingsphere-kernel-transaction-xa-core</module>
-        <module>shardingsphere-kernel-transaction-xa-provider</module>
+        <module>shardingsphere-kernel-transaction-xa-atomikos</module>
+        <module>shardingsphere-kernel-transaction-xa-narayana</module>
+        <module>shardingsphere-kernel-transaction-xa-bitronix</module>
     </modules>
 </project>
