Add openGauss XA

--- a/shardingsphere-kernel/shardingsphere-transaction/shardingsphere-transaction-xa/shardingsphere-transaction-xa-core/pom.xml
+++ b/shardingsphere-kernel/shardingsphere-transaction/shardingsphere-transaction-xa/shardingsphere-transaction-xa-core/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opengauss</groupId>
+            <artifactId>opengauss-jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
         </dependency>
